Fix margin spacing on 3D hover covers

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -499,8 +499,8 @@
       align-items: center;
       justify-content: center;
       perspective: 600px;
-      width: 200px;
-      margin-top: 20px;
+      width: 175px;
+      margin: 10px 10px 10px 0px;
       float: left;
     }
 
